# transfermarkt-api

./: .env.example  README.md  pyproject.toml
app/: main.py  settings.py
app/schemas/: base.py
app/schemas/clubs/: players.py
app/schemas/players/: stats.py  transfers.py
app/services/: base.py
app/services/clubs/: players.py
app/services/players/: profile.py  transfers.py
app/utils/: regex.py  utils.py  xpath.py
tests/clubs/: test_clubs_players.py
tests/players/: test_players_transfers.py
